[B]Version 0.0.9[/B]
+ Torrent2http binaries updated to 1.0.4, LibTorrent updated to 1.0.5
+ More aggressive tracker connection

[B]Version 0.0.8[/B]
+ Torrent2http binaries updated to 1.0.3

[B]Version 0.0.7[/B]
+ Torrent2http binaries updated to 1.0.2

[B]Version 0.0.6[/B]
+ Added code comments
* Better support of unicode path names

[B]Version 0.0.5[/B]
+ Torrent2http binaries updated to 1.0.1

[B]Version 0.0.4[/B]
+ Added some mime types for better detection

[B]Version 0.0.3[/B]
+ Detect media types

[B]Version 0.0.2[/B]
+ Added some configurable libtorrent options

[B]Version 0.0.1[/B]
+ Initial release