@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.torrent2http" name="torrent2http" version="0.0.9" provider-name="anteo">
+<addon id="script.module.torrent2http" name="torrent2http" version="0.1.0" provider-name="anteo">
     <requires>
         <import addon="xbmc.python" version="2.14.0"/>
     </requires>
